wiki: Don't remove 0-deg vertices

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -189,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#for g in graphs:\n",
@@ -207,25 +205,9 @@
    },
    "outputs": [],
    "source": [
-    " #   graphs[1].vertex_properties['closeness'] = closeness(graphs[1])\n",
     "#for g in graphs:\n",
-    "  #  print('-')\n",
+    "#    print('-')\n",
     "#    g.vertex_properties['closeness'] = closeness(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (i,g) in enumerate(graphs):\n",
-    "    print(i)\n",
-    "#    g.remove_vertex(find_vertex(g, 'total', 0)) Also slow ???????\n",
-    "    \n",
-    "#    vertices_secluded = g.new_graph_property('float')\n",
-    "#    vertices_secluded[g] = len(g.get_vertices()) - vertices[g]\n",
-    "#    g.graph_properties['vertices_secluded'] = vertices_secluded"
    ]
   },
   {
@@ -265,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "d = {}\n",
