wiki: Generate DataFrame with measures

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#### Uncomment this block when running code for first time(and comment it back later)\n",
@@ -48,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "G = load_graph('data/original.gt')\n",
@@ -123,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -192,33 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for g in graphs:\n",
-    "#    print('-')\n",
-    "#    g.vertex_properties['betweenness'], g.edge_properties['betweenness'] = betweenness(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#for g in graphs:\n",
-    "#    print('-')\n",
-    "#    g.vertex_properties['closeness'] = closeness(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (i,g) in enumerate(graphs):\n",
-    "    print(i)\n",
-    "    #g.vertex_properties['shortest_distances'] = shortest_distance(g)"
+    "#for (i,g) in enumerate(graphs):\n",
+    "    #print(i)\n",
+    "   # g.vertex_properties['shortest_distances'] = shortest_distance(g)"
    ]
   },
   {
@@ -231,17 +213,6 @@
    "source": [
     "#for g in graphs:\n",
     "    # TODO: similarity(g1, g2) or vertex_similarity(g1, g2) ??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#graph_draw(graphs[0], vertex_fill_color=g.vertex_properties['pagerank'], output=\"pagerank_0.pdf\") SLOW???"
    ]
   },
   {
@@ -271,11 +242,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = {}\n",
+    "for name in graphs[-1].vertex_properties['name'].get_2d_array([0])[0]:\n",
+    "    d[name] = {}\n",
+    "    \n",
+    "for (i,g) in enumerate(graphs):\n",
+    "    print(i)\n",
+    "    for j in g.get_vertices():\n",
+    "        name = g.vertex_properties['name'][j]\n",
+    "        for (p, v) in g.vertex_properties.items():\n",
+    "            d[name]['{0}_{1}'.format(p, i)] = v[j]\n",
+    "            \n",
+    "df = pd.DataFrame.from_dict(dx, orient='index')\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/measures.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Start execution from here, to avoid recomputations\n",
+    "df = pd.read_csv('data/measures.csv', index_col=0)\n",
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
