--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -195,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for (i,g) in enumerate(graphs):\n",
@@ -219,6 +221,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -242,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {}\n",
@@ -263,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv('data/measures.csv')"
@@ -272,12 +279,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Start execution from here, to avoid recomputations\n",
     "df = pd.read_csv('data/measures.csv', index_col=0)\n",
-    "display(df)"
+    "\n",
+    "cols = df.columns\n",
+    "for c in cols:\n",
+    "    if c.endswith('_15'):    \n",
+    "        df = df.rename(columns={c:c[:-3]+'_full'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr = df.sort_values(by='pagerank_full', ascending=False)[df.columns[df.columns.str.contains('^pagerank.*')]].head(100)\n",
+    "display(pr)"
    ]
   }
  ],
