--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -155,6 +155,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for g in graphs:\n",
+    "    vs = g.get_vertices()\n",
+    "    \n",
+    "    degree_in = g.new_vertex_property('int')\n",
+    "    for (i,v) in enumerate(g.get_in_degrees(vs)):\n",
+    "        degree_in[i] = v\n",
+    "    g.vertex_properties['degree_in'] = degree_in\n",
+    "    \n",
+    "    degree_out = g.new_vertex_property('int')\n",
+    "    for (i,v) in enumerate(g.get_out_degrees(vs)):\n",
+    "        degree_out[i] = v\n",
+    "    g.vertex_properties['degree_out'] = degree_out\n",
+    "    \n",
+    "    degree_total = g.new_vertex_property('int')\n",
+    "    for (i,v) in enumerate(degree_in):\n",
+    "        degree_total[i] = v + degree_out[i]\n",
+    "    g.vertex_properties['degree_total'] = degree_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "for g in graphs:\n",
+    "    modl = g.new_graph_property('float')\n",
+    "    b = minimize_blockmodel_dl(g)\n",
+    "    modl[g] = modularity(g, b)\n",
+    "    g.graph_properties['modularity'] = modl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -273,20 +312,6 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('data/measures.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### Start execution from here, to avoid recomputations\n",
-    "df = pd.read_csv('data/measures.csv', index_col=0)\n",
-    "\n",
     "cols = df.columns\n",
     "for c in cols:\n",
     "    if c.endswith('_15'):    \n",
@@ -299,8 +324,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr = df.sort_values(by='pagerank_full', ascending=False)[df.columns[df.columns.str.contains('^pagerank.*')]].head(100)\n",
-    "display(pr)"
+    "df = df.sort_index()\n",
+    "cols = df.columns\n",
+    "for c in cols:\n",
+    "    display(c)\n",
+    "    df[\"rank_{0}\".format(c)] = df.sort_values(by=c, ascending=False).reset_index().rename_axis('rank').reset_index().set_index('id').sort_index()['rank'] + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.to_pickle('data/df.xz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Start execution from here to avoid recomputations\n",
+    "df = pd.read_pickle('data/df.xz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr = df[df.columns[df.columns.str.contains('.*pagerank.*')]].sort_values(by='rank_pagerank_full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "display(pr[pr.columns[pr.columns.str.contains('^pagerank.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(pr[pr.columns[pr.columns.str.contains('^rank_pagerank.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hit = df[df.columns[df.columns.str.contains('.*hits.*')]].sort_values(by='rank_hits_authority_full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(hit[hit.columns[hit.columns.str.contains('^hits_authority.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(hit[hit.columns[hit.columns.str.contains('^rank_hits_authority.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hit = df[df.columns[df.columns.str.contains('.*hits.*')]].sort_values(by='rank_hits_hub_full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(hit[hit.columns[hit.columns.str.contains('^hits_hub.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "display(hit[hit.columns[hit.columns.str.contains('^rank_hits_hub.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lcc = df[df.columns[df.columns.str.contains('.*largest_connected_component.*')]].sort_values(by='rank_largest_connected_component_full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(lcc[lcc.columns[lcc.columns.str.contains('^largest_connected_component.*')]].head(30))"
    ]
   }
  ],
