Add Assortativity measure

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -155,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -180,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
@@ -229,6 +233,34 @@
    "source": [
     "for g in graphs:\n",
     "    g.vertex_properties['largest_connected_component'] = label_largest_component(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for g in graphs:\n",
+    "    assortativity_in = g.new_graph_property('float')\n",
+    "    assortativity_in_var = g.new_graph_property('float')\n",
+    "    assortativity_out = g.new_graph_property('float')\n",
+    "    assortativity_out_var = g.new_graph_property('float')\n",
+    "    assortativity_total = g.new_graph_property('float')\n",
+    "    assortativity_total_var = g.new_graph_property('float')\n",
+    "    \n",
+    "    assortativity_in[g], assortativity_in_var[g] = assortativity(g, 'in')\n",
+    "    assortativity_out[g], assortativity_out_var[g] = assortativity(g, 'out')\n",
+    "    assortativity_total[g], assortativity_total_var[g] = assortativity(g, 'total')\n",
+    "    \n",
+    "    g.graph_properties['assortativity_in'] = assortativity_in\n",
+    "    g.graph_properties['assortativity_in_var'] = assortativity_in_var\n",
+    "    g.graph_properties['assortativity_out'] = assortativity_out\n",
+    "    g.graph_properties['assortativity_out_var'] = assortativity_out_var\n",
+    "    g.graph_properties['assortativity_total'] = assortativity_total\n",
+    "    g.graph_properties['assortativity_total_var'] = assortativity_total_var"
    ]
   },
   {
@@ -321,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.sort_index()\n",
@@ -357,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pr = df[df.columns[df.columns.str.contains('.*pagerank.*')]].sort_values(by='rank_pagerank_full')"
