wiki: add eigenvector, modularity, visualizations

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -43,7 +43,7 @@
     "#    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
     "#    g.graph_properties['timestamp'] = timestamp\n",
     "#    graphs.append(g)\n",
-    "    \n",
+    "#    \n",
     "#    g.save(os.path.join('data/snapshots/gt', name + '.gt'))"
    ]
   },
@@ -155,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -182,17 +180,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
     "for g in graphs:\n",
-    "    modl = g.new_graph_property('float')\n",
-    "    b = minimize_blockmodel_dl(g)\n",
-    "    modl[g] = modularity(g, b)\n",
-    "    g.graph_properties['modularity'] = modl"
+    "    m = g.new_graph_property('float')\n",
+    "    m[g] = modularity(g, minimize_blockmodel_dl(g).get_blocks())\n",
+    "    g.graph_properties['modularity'] = m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for g in graphs:\n",
+    "    eigen = g.new_graph_property('float')\n",
+    "    eigen[g], g.vertex_properties['eigenvector'] = eigenvector(g)\n",
+    "    g.graph_properties['eigenvector'] = eigen"
    ]
   },
   {
@@ -266,26 +272,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#for (i,g) in enumerate(graphs):\n",
-    "    #print(i)\n",
-    "   # g.vertex_properties['shortest_distances'] = shortest_distance(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#for g in graphs:\n",
-    "    # TODO: similarity(g1, g2) or vertex_similarity(g1, g2) ??"
+    "for (i, g) in enumerate(graphs):\n",
+    "    # Let's see if these visualizations are better\n",
+    "    if i < 3:\n",
+    "        graph_draw(g, pos=sfdp_layout(g), output=\"graph-{0}.pdf\".format(i))"
    ]
   },
   {
@@ -403,6 +396,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -413,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(pr[pr.columns[pr.columns.str.contains('^rank_pagerank.*')]].head(20))"
@@ -433,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(hit[hit.columns[hit.columns.str.contains('^hits_authority.*')]].head(20))"
@@ -442,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(hit[hit.columns[hit.columns.str.contains('^rank_hits_authority.*')]].head(20))"
@@ -462,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(hit[hit.columns[hit.columns.str.contains('^hits_hub.*')]].head(20))"
@@ -472,6 +474,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -493,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(lcc[lcc.columns[lcc.columns.str.contains('^largest_connected_component.*')]].head(30))"
