wiki: report progress, visualize partitions

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -86,7 +86,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:       \n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)     \n",
     "    vertices = g.new_graph_property('float')\n",
     "    vertices[g] = len(g.get_vertices())\n",
     "    g.graph_properties['vertices'] = vertices\n",
@@ -104,7 +105,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    degree_in = g.new_graph_property('float')\n",
     "    degree_in_std = g.new_graph_property('float')\n",
     "    degree_in[g], degree_in_std[g] = vertex_average(g, 'in')\n",
@@ -132,7 +134,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    clustering = g.new_graph_property('float')\n",
     "    clustering_std = g.new_graph_property('float')\n",
     "    clustering[g], clustering_std[g] = global_clustering(g)\n",
@@ -148,7 +151,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    g.vertex_properties['pagerank'] = pagerank(g)"
    ]
   },
@@ -158,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    vs = g.get_vertices()\n",
     "    \n",
     "    degree_in = g.new_vertex_property('int')\n",
@@ -183,10 +188,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
+    "    display('deriving stochastic block model...')\n",
     "    m = g.new_graph_property('float')\n",
-    "    m[g] = modularity(g, minimize_blockmodel_dl(g).get_blocks())\n",
-    "    g.graph_properties['modularity'] = m"
+    "    bm = minimize_blockmodel_dl(g)\n",
+    "    m[g] = modularity(g, bm.get_blocks())\n",
+    "    g.graph_properties['modularity'] = m\n",
+    "    \n",
+    "    display('visualizing...')\n",
+    "    bm.draw(output='communities_{0}.pdf'.format(i))"
    ]
   },
   {
@@ -195,7 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    eigen = g.new_graph_property('float')\n",
     "    eigen[g], g.vertex_properties['eigenvector'] = eigenvector(g)\n",
     "    g.graph_properties['eigenvector'] = eigen"
@@ -209,7 +221,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    hits_eigen = g.new_graph_property('float')\n",
     "    hits_eigen[g], g.vertex_properties['hits_authority'], g.vertex_properties['hits_hub'] = hits(g)\n",
     "    g.graph_properties['hits_eigen'] = hits_eigen"
@@ -223,7 +236,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    diameter = g.new_graph_property('float')\n",
     "    diameter[g], _ = pseudo_diameter(g)\n",
     "    g.graph_properties['diameter'] = diameter"
@@ -237,7 +251,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    g.vertex_properties['largest_connected_component'] = label_largest_component(g)"
    ]
   },
@@ -249,7 +264,8 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    assortativity_in = g.new_graph_property('float')\n",
     "    assortativity_in_var = g.new_graph_property('float')\n",
     "    assortativity_out = g.new_graph_property('float')\n",
@@ -276,6 +292,7 @@
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
     "    # Let's see if these visualizations are better\n",
     "    if i < 3:\n",
     "        graph_draw(g, pos=sfdp_layout(g), output=\"graph-{0}.pdf\".format(i))"
