wiki: save/load graphs. Show degrees

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -55,6 +55,31 @@
    },
    "outputs": [],
    "source": [
+    "def saveGraphs(graphs):\n",
+    "    for (i, g) in enumerate(graphs):\n",
+    "        g.save(os.path.join('data', 'cache', 'graph_{0}.gt'.format(i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadGraphs():\n",
+    "    return [load_graph(os.path.join('data', 'cache', name))\\\n",
+    "          for name in os.listdir(os.path.join('data', 'cache'))\\\n",
+    "          if name.endswith('.gt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "G = load_graph('data/original.gt')\n",
     "\n",
     "graphs = []\n",
@@ -81,7 +106,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -101,7 +125,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -130,7 +154,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -147,7 +171,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -159,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -196,14 +222,16 @@
     "    m[g] = modularity(g, bm.get_blocks())\n",
     "    g.graph_properties['modularity'] = m\n",
     "    \n",
-    "    display('visualizing...')\n",
-    "    bm.draw(output='communities_{0}.pdf'.format(i))"
+    "   # display('visualizing...')\n",
+    "    #bm.draw(output='communities_{0}.pdf'.format(i))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -288,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -519,6 +549,39 @@
    "outputs": [],
    "source": [
     "display(lcc[lcc.columns[lcc.columns.str.contains('^largest_connected_component.*')]].head(30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "degrees = df[df.columns[df.columns.str.contains('^degree.*')]].sort_values(by='degree_total_full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "display(degrees[degrees.columns[degrees.columns.str.contains('^degree.*')]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "display(degrees[degrees.columns[degrees.columns.str.contains('^rank_degree.*')]].head(20))"
    ]
   }
  ],
