wiki: loadGraphs, show LCC size

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -211,6 +211,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graphs = loadGraphs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,23 +543,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lcc = df[df.columns[df.columns.str.contains('.*largest_connected_component.*')]].sort_values(by='rank_largest_connected_component_full')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "display(lcc[lcc.columns[lcc.columns.str.contains('^largest_connected_component.*')]].head(30))"
+    "for i in range(15):\n",
+    "    display(\"Size of largest connected component in snapshot {:d}: {:d}\".format(i, int(df['largest_connected_component_{0}'.format(i)].sum())))\n",
+    "display(\"Size of largest connected component in full graph:  {:d}\".format(int(df['largest_connected_component_full'].sum())))"
    ]
   },
   {
