wiki: save/load graphs, LCC

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -28,23 +28,24 @@
    },
    "outputs": [],
    "source": [
-    "#### Uncomment this block when running code for first time(and comment it back later)\n",
-    "#####################################################################################\n",
-    "#G = load_graph_from_csv(\"data/data.txt\", directed=True, eprop_types=['int', 'int'], eprop_names=['start', 'end'], string_vals=True, csv_options={'delimiter':' '})\n",
-    "#G.save('data/original.gt')\n",
+    "def graphsFromCSV():\n",
+    "    G = load_graph_from_csv(\"data/data.txt\", directed=True, eprop_types=['int', 'int'], eprop_names=['start', 'end'], string_vals=True, csv_options={'delimiter':' '})\n",
+    "    G.save('data/original.gt')\n",
     "\n",
-    "#graphs = []\n",
-    "#for name in os.listdir('data/snapshots/csv'):\n",
-    "#    if not name.endswith('.csv'):\n",
-    "#        continue\n",
-    "#        \n",
-    "#    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=True)\n",
-    "#    timestamp = g.new_graph_property('python::object')\n",
-    "#    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
-    "#    g.graph_properties['timestamp'] = timestamp\n",
-    "#    graphs.append(g)\n",
-    "#    \n",
-    "#    g.save(os.path.join('data/snapshots/gt', name + '.gt'))"
+    "    graphs = []\n",
+    "    for name in os.listdir('data/snapshots/csv'):\n",
+    "        if not name.endswith('.csv'):\n",
+    "            continue\n",
+    "        \n",
+    "        g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=True)\n",
+    "        timestamp = g.new_graph_property('python::object')\n",
+    "        timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
+    "        g.graph_properties['timestamp'] = timestamp\n",
+    "        graphs.append(g)\n",
+    "        \n",
+    "    graphs = sorted(graphs, key=lambda g : g.graph_properties['timestamp'])\n",
+    "    graphs.append(G)\n",
+    "    return graphs"
    ]
   },
   {
@@ -68,8 +69,18 @@
    "source": [
     "def loadGraphs():\n",
     "    return [load_graph(os.path.join('data', 'cache', name))\\\n",
-    "          for name in os.listdir(os.path.join('data', 'cache'))\\\n",
-    "          if name.endswith('.gt')]"
+    "          for name in sorted([name for name in os.listdir(os.path.join('data', 'cache')) if name.endswith('.gt')],\\\n",
+    "                             key=lambda s: s[7:-3])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Uncomment the following statement when running code for the first time(and comment it back later)\n",
+    "#saveGraphs(graphsFromCSV())"
    ]
   },
   {
@@ -80,26 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "G = load_graph('data/original.gt')\n",
-    "\n",
-    "graphs = []\n",
-    "for name in os.listdir('data/snapshots/gt'):\n",
-    "    if not name.endswith('.gt'):\n",
-    "        continue\n",
-    "        \n",
-    "    graphs.append(load_graph(os.path.join('data/snapshots/gt', name)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "graphs = sorted(graphs, key=lambda g : g.graph_properties['timestamp'])\n",
-    "graphs.append(G)"
+    "graphs = loadGraphs()"
    ]
   },
   {
@@ -193,56 +185,22 @@
     "    vs = g.get_vertices()\n",
     "    \n",
     "    degree_in = g.new_vertex_property('int')\n",
-    "    for (i,v) in enumerate(g.get_in_degrees(vs)):\n",
-    "        degree_in[i] = v\n",
+    "    degree_in.a = g.get_in_degrees(vs)\n",
     "    g.vertex_properties['degree_in'] = degree_in\n",
     "    \n",
     "    degree_out = g.new_vertex_property('int')\n",
-    "    for (i,v) in enumerate(g.get_out_degrees(vs)):\n",
-    "        degree_out[i] = v\n",
+    "    degree_out.a = g.get_out_degrees(vs)\n",
     "    g.vertex_properties['degree_out'] = degree_out\n",
     "    \n",
     "    degree_total = g.new_vertex_property('int')\n",
-    "    for (i,v) in enumerate(degree_in):\n",
-    "        degree_total[i] = v + degree_out[i]\n",
+    "    degree_total.a = degree_in.a+degree_out.a\n",
     "    g.vertex_properties['degree_total'] = degree_total"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "graphs = loadGraphs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
-    "    display('deriving stochastic block model...')\n",
-    "    m = g.new_graph_property('float')\n",
-    "    bm = minimize_blockmodel_dl(g)\n",
-    "    m[g] = modularity(g, bm.get_blocks())\n",
-    "    g.graph_properties['modularity'] = m\n",
-    "    \n",
-    "   # display('visualizing...')\n",
-    "    #bm.draw(output='communities_{0}.pdf'.format(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -255,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -270,24 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
-    "    diameter = g.new_graph_property('float')\n",
-    "    diameter[g], _ = pseudo_diameter(g)\n",
-    "    g.graph_properties['diameter'] = diameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -298,9 +237,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphs = loadGraphs()\n",
+    "display(\"Loaded measures:\")\n",
+    "display(\"For vertices:\", [name for (name, v) in graphs[-1].vertex_properties.items()])\n",
+    "display(\"For graph:\", [name for (name, v) in graphs[-1].graph_properties.items()])\n",
+    "display(graphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -332,6 +282,77 @@
    },
    "outputs": [],
    "source": [
+    "saveGraphs(graphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
+    "    for (j, v) in enumerate(g.vertex_properties['largest_connected_component']):\n",
+    "        if v == 0:\n",
+    "            continue\n",
+    "            \n",
+    "        diameter = g.new_graph_property('float')\n",
+    "        diameter[g], _ = pseudo_diameter(g, source=j)\n",
+    "        g.graph_properties['diameter'] = diameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saveGraphs(graphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for (i, g) in enumerate(graphs):\n",
+    "    display(i)\n",
+    "    m = g.new_graph_property('float')\n",
+    "    bm = minimize_blockmodel_dl(g)\n",
+    "    m[g] = modularity(g, bm.get_blocks())\n",
+    "    g.graph_properties['modularity'] = m\n",
+    "    \n",
+    "   # display('visualizing...')\n",
+    "    #bm.draw(output='communities_{0}.pdf'.format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saveGraphs(graphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "for (i, g) in enumerate(graphs):\n",
     "    display(i)\n",
     "    # Let's see if these visualizations are better\n",
@@ -343,7 +364,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -367,21 +387,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {}\n",
     "for name in graphs[-1].vertex_properties['name'].get_2d_array([0])[0]:\n",
     "    d[name] = {}\n",
-    "    \n",
+    "\n",
     "for (i,g) in enumerate(graphs):\n",
     "    print(i)\n",
     "    for j in g.get_vertices():\n",
     "        name = g.vertex_properties['name'][j]\n",
     "        for (p, v) in g.vertex_properties.items():\n",
-    "            d[name]['{0}_{1}'.format(p, i)] = v[j]\n",
+    "            if not p == 'name':\n",
+    "                d[name]['{0}_{1}'.format(p, i)] = v[j]\n",
     "            \n",
     "df = pd.DataFrame.from_dict(dx, orient='index')\n",
     "display(df)"
@@ -543,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(15):\n",
