wiki: generate dataframe faster

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -318,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (i, g) in enumerate(graphs):\n",
@@ -337,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "saveGraphs(graphs)"
@@ -390,20 +386,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {}\n",
-    "for name in graphs[-1].vertex_properties['name'].get_2d_array([0])[0]:\n",
-    "    d[name] = {}\n",
-    "\n",
+    "dfs = []\n",
     "for (i,g) in enumerate(graphs):\n",
-    "    print(i)\n",
-    "    for j in g.get_vertices():\n",
-    "        name = g.vertex_properties['name'][j]\n",
-    "        for (p, v) in g.vertex_properties.items():\n",
-    "            if not p == 'name':\n",
-    "                d[name]['{0}_{1}'.format(p, i)] = v[j]\n",
+    "    display(i)\n",
+    "    d = {}\n",
+    "    for (p, v) in g.vertex_properties.items():\n",
+    "        if not p == 'name':\n",
+    "            d['{0}_{1}'.format(p, i)] = v.a\n",
+    "    dfs.append(pd.DataFrame(d, index=g.vertex_properties['name'].a))\n",
     "            \n",
-    "df = pd.DataFrame.from_dict(dx, orient='index')\n",
-    "display(df)"
+    "df = pd.concat(dfs, axis=1).rename_axis('id').sort_index()"
    ]
   },
   {
@@ -423,15 +415,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.sort_index()\n",
     "cols = df.columns\n",
     "for c in cols:\n",
-    "    display(c)\n",
     "    df[\"rank_{0}\".format(c)] = df.sort_values(by=c, ascending=False).reset_index().rename_axis('rank').reset_index().set_index('id').sort_index()['rank'] + 1"
    ]
   },
