wiki: faster dataframe and sorting

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -392,36 +392,16 @@
     "    d = {}\n",
     "    for (p, v) in g.vertex_properties.items():\n",
     "        if not p == 'name':\n",
-    "            d['{0}_{1}'.format(p, i)] = v.a\n",
-    "    dfs.append(pd.DataFrame(d, index=g.vertex_properties['name'].a))\n",
+    "            d['{0}_{1}'.format(p, \"full\" if i==len(graphs)-1 else i)] = v.a\n",
+    "    df = pd.DataFrame(d, index=g.vertex_properties['name'].a).rename_axis('id')\n",
+    "    \n",
+    "    cols = df.columns\n",
+    "    for (i, c) in enumerate(cols):\n",
+    "        df[\"rank_{0}\".format(c)] = df.sort_values(by=c, ascending=False).reset_index().rename_axis('rank').reset_index().set_index('id').sort_index()['rank'] + 1\n",
+    "        \n",
+    "    dfs.append(df)\n",
     "            \n",
-    "df = pd.concat(dfs, axis=1).rename_axis('id').sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cols = df.columns\n",
-    "for c in cols:\n",
-    "    if c.endswith('_15'):    \n",
-    "        df = df.rename(columns={c:c[:-3]+'_full'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.sort_index()\n",
-    "cols = df.columns\n",
-    "for c in cols:\n",
-    "    df[\"rank_{0}\".format(c)] = df.sort_values(by=c, ascending=False).reset_index().rename_axis('rank').reset_index().set_index('id').sort_index()['rank'] + 1"
+    "df = pd.concat(dfs, axis=1).sort_index()"
    ]
   },
   {
